--- a/styles/style.css
+++ b/styles/style.css
@@ -389,7 +389,7 @@ footer {
   -moz-animation: "fade" 12s infinite;
   -ms-animation: "fade" 12s infinite;
   -webkit-animation: "fade" 12s infinite;
-  color: #DE9B43;
+  color: #fff;
   display: inline;
   opacity: 0;
   position: absolute;
